compiler/tests/ar/errors/pure_print.salam
// لغة: العربية
// توقع: E012
نقي دالة صارخ(قيمة : صحيح) : صحيح:
    اطبع قيمة
    أرجع قيمة
نهاية

دالة الرئيسية:
    اطبع صارخ(2)
نهاية
